--- a/client/main.html
+++ b/client/main.html
@@ -4,7 +4,7 @@
 
 <body>
   <div class="container">
-    <h1>Notes!</h1>
+    <h1>Latest Notes</h1>
     <ul class="list-group">
       {{#each notes}}
           {{> note}}
