--- a/client/main.html
+++ b/client/main.html
@@ -3,17 +3,53 @@
 </head>
 
 <body>
+
   <div class="container">
-    <h1>Latest Notes</h1>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+              Notes
+            </a>
+          </div>
+          <button type="button" class="btn btn-default navbar-btn"
+                  data-toggle="modal" data-target="#myModal">
+            Add Note
+          </button>
+        </div>
+    </nav>
+    <h3>Latest Notes</h3>
     <ul class="list-group">
       {{#each notes}}
           {{> note}}
       {{/each}}
     </ul>
   </div>
+
+  {{> themodal}}
 </body>
 
 
 <template name="note">
   <li class="list-group-item">{{text}}</li>
+</template>
+
+<template name="themodal">
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </template>
