--- a/client/main.html
+++ b/client/main.html
@@ -12,7 +12,7 @@
               Notes
             </a>
           </div>
-          <button type="button" class="btn btn-default navbar-btn"
+          <button type="button" class="btn btn-primary navbar-btn"
                   data-toggle="modal" data-target="#myModal">
             Add Note
           </button>
@@ -31,24 +31,34 @@
 
 
 <template name="note">
-  <li class="list-group-item">{{text}}</li>
+  <li class="list-group-item">
+    <!--  display the *text* field of the db objects -->
+    {{text}}
+    <!--  and the date -->
+    <p id="createddate">{{createdAt}}</p>
+  </li>
 </template>
 
 <template name="themodal">
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+        <form class='addnoteform'>
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">New Note</h4>
+          </div>
+          <div class="modal-body">
+              <div class="form-group">
+                <input type="text" class="form-control"
+                       id="notetext" placeholder="Note Text ...">
+              </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Add Note</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
