--- a/client/main.html
+++ b/client/main.html
@@ -34,6 +34,8 @@
   <li class="list-group-item">
     <!--  display the *text* field of the db objects -->
     {{text}}
+    <!--  remove icon -->
+    <a class="deletenote pull-right glyphicon glyphicon-remove" aria-hidden="true"></a>
     <!--  and the date -->
     <p id="createddate">{{createdAt}}</p>
   </li>
