--- a/client/main.html
+++ b/client/main.html
@@ -16,6 +16,9 @@
                   data-toggle="modal" data-target="#myModal">
             Add Note
           </button>
+          <span class="">
+            {{> loginButtons}}
+          </span>
         </div>
     </nav>
     <h3>Latest Notes</h3>
